fix center alignment of hero-contet

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
     margin-bottom: 60px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .hero-left-content {
